crates/rome_formatter/tests/specs/prettier/babel-plugins/private-fields-in-in.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: private-fields-in-in.js

---
# Input
```js
// https://github.com/tc39/proposal-private-fields-in-in

class C {
  #brand;

  static isC(obj) {
    try {
      obj.#brand;
      return true;
    } catch {
      return false;
    }
  }
}

class C2 {
  #data = null; // populated later

  get #getter() {
    if (!this.#data) {
      throw new Error('no data yet!');
    }
    return this.#data;
  }

  static isC(obj) {
    try {
      obj.#getter;
      return true;
    } catch {
      return false; // oops! might have gotten here because `#getter` threw :-(
    }
  }
}

class C3 {
  #brand;

  #method() {}

  get #getter() {}

  static isC(obj) {
    return #brand in obj && #method in obj && #getter in obj;
  }
}

// Invalid https://github.com/tc39/proposal-private-fields-in-in#try-statement
// class C {
//   #brand;

//   static isC(obj) {
//     return try obj.#brand;
//   }
// }

```

# Output
```js
// https://github.com/tc39/proposal-private-fields-in-in
class C {
  #brand;

  static isC(obj) {
    try {
      obj.#brand;
      return true;
    } catch {
      return false;
    }
  }
}

class C2 {
  #data = null; // populated later

  get #getter() {
    if (!this.#data) {
      throw new Error("no data yet!");
    }
    return this.#data;
  }

  static isC(obj) {
    try {
      obj.#getter;
      return true;
    } catch {
      return false; // oops! might have gotten here because `#getter` threw :-(
    }
  }
}

class C3 {
  #brand;

  #method() {}

  get #getter() {}

  static isC(obj) {
    return #brand in obj && #method  in obj && #getter  in obj;
  }
}// Invalid https://github.com/tc39/proposal-private-fields-in-in#try-statement
// class C {
//   #brand;
//   static isC(obj) {
//     return try obj.#brand;
//   }
// }

```

# Errors
```
error[SyntaxError]: Private names are only allowed on the left side of a binary expression
   ┌─ private-fields-in-in.js:44:29
   │
44 │     return #brand in obj && #method in obj && #getter in obj;
   │                             ^^^^^^^

error[SyntaxError]: Private names are only allowed on the left side of a binary expression
   ┌─ private-fields-in-in.js:44:47
   │
44 │     return #brand in obj && #method in obj && #getter in obj;
   │                                               ^^^^^^^


```


